--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ search: true
 baseurl: /rentswatch-blog
 
 # Jekyll configuration
-permalink:   /:categories/:title/
+permalink:   /:title/
 markdown:    kramdown
 highlighter: pygments
 sass:
