--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ locale: en_US
 description: Keeps an eye on rents. Everywhere in Europe, all the time.
 logo: site-logo.png
 search: true
+baseurl: '/rentswatch-blog'
 production_url : http://jplusplus.github.io/rentswatch-blog
 
 # Jekyll configuration
