Switched to svg logo

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Rentswatch Blog
 locale: en_US
 description: Keeps an eye on rents. Everywhere in Europe, all the time.
-logo: site-logo.png
+logo: site-logo.svg
 search: true
 baseurl: '/rentswatch-blog'
 production_url : http://jplusplus.github.io/rentswatch-blog
