--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ locale: en_US
 description: Keeps an eye on rents. Everywhere in Europe, all the time.
 logo: site-logo.svg
 search: true
-baseurl: '/rentswatch-blog'
-production_url : http://jplusplus.github.io/rentswatch-blog
+baseurl: '/'
+production_url : http://blog.rentswatch.com
 
 # Jekyll configuration
 permalink:   /:title/
