--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,3 +6,10 @@ pirhoo:
   email: hello@pirhoo.com
   avatar: https://secure.gravatar.com/avatar/f514016d15f3d5409177c1031eedb0a5?s=200
   twitter: pirhoo
+
+nkb:
+  name: Nicolas Kayser-Bril
+  web: http://www.nkb.fr
+  email: hi@nkb.fr
+  avatar: https://pbs.twimg.com/profile_images/575984392016801792/6KEzT3gT.jpeg
+  twitter: nicolaskb
