--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ owner:
   avatar: bio-photo.png
   email: bonjour@jplusplus.org
   disqus-shortname:
-  twitter: jplusplus_
+  twitter: rentswatch
   facebook: Journalismplusplus
   github: jplusplus
   stackexchange: #http://stackoverflow.com/users/123456/username
