--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,12 +4,12 @@ pirhoo:
   name: Pierre Romera
   web: http://www.pirhoo.com
   email: hello@pirhoo.com
-  avatar: https://secure.gravatar.com/avatar/f514016d15f3d5409177c1031eedb0a5?s=200
+  avatar: pirhoo.jpg
   twitter: pirhoo
 
 nkb:
   name: Nicolas Kayser-Bril
   web: http://www.nkb.fr
   email: hi@nkb.fr
-  avatar: https://pbs.twimg.com/profile_images/575984392016801792/6KEzT3gT.jpeg
+  avatar: nkb.jpg
   twitter: nicolaskb
