--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,3 +13,10 @@ nkb:
   email: hi@nkb.fr
   avatar: nkb.jpg
   twitter: nicolaskb
+
+camille:
+  name: Camille Josse
+  web: https://twitter.com/camille_josse
+  email: camille@jplusplus.org
+  avatar: camille.jpg
+  twitter: camille_josse
